--- a/views/mypage_wishList.ejs
+++ b/views/mypage_wishList.ejs
@@ -1,76 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wishlist</title>
-    <link rel="stylesheet" href="./assets/css/wishList.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Wishlist</title>
+  <link rel="stylesheet" href="./assets/css/wishList.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <style>
-        #logo{
-            height: 45px;
-        }
-        body>header, footer{
-            background-color: #093023;
-        }
-        body {
-          background-color: rgb(238, 238, 238);
-        }
+  <style>
+    #logo {
+      height: 45px;
+    }
 
-        main {
-          background-color: white;
-        }
+    body>header,
+    footer {
+      background-color: #093023;
+    }
 
-        .dropdown-item:active {
-          background-color:grey;
-        }
+    body {
+      background-color: rgb(238, 238, 238);
+    }
 
-        @media (max-width: 890px) {
-          ul.nav.col-12 {
-          display: none;
-          }
+    main {
+      background-color: white;
+    }
 
-          div.col-md-3.text-end {
-            flex-grow: 1;
-          }
-        }
+    .dropdown-item:active {
+      background-color: grey;
+    }
 
-        @media (max-width: 768px) {
-          ul.nav.col-12 {
-            display: none;
-          }
-          div.col-md-3.text-end {
-            flex-grow: 1;
-          }
-          button#dropdownMenuButton1.dropdown-toggle::after{
-            display: none;
-          }
-          
-        }
+    @media (max-width: 890px) {
+      ul.nav.col-12 {
+        display: none;
+      }
 
-        div.product-name.my-2{
-          color: black;
-          
-          
-        }
-    </style>
+      div.col-md-3.text-end {
+        flex-grow: 1;
+      }
+    }
+
+    @media (max-width: 768px) {
+      ul.nav.col-12 {
+        display: none;
+      }
+
+      div.col-md-3.text-end {
+        flex-grow: 1;
+      }
+
+      button#dropdownMenuButton1.dropdown-toggle::after {
+        display: none;
+      }
+
+    }
+
+    div.product-name.my-2 {
+      color: black;
+
+
+    }
+  </style>
 
 </head>
+
 <body>
-    
-    <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3">
-        <!-- 로고 마진 mx로 줌 -->
-    <a href="http://127.0.0.1:3000/main" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none mx-3">
+
+  <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3">
+    <!-- 로고 마진 mx로 줌 -->
+    <a href="http://127.0.0.1:3000/main"
+      class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none mx-3">
       <img src="./img/logo02.PNG" alt="" id="logo">
     </a>
-      <!-- nbsp텍스트 영역으로 들여옴, col-md 바꿈 -->
+    <!-- nbsp텍스트 영역으로 들여옴, col-md 바꿈 -->
     <ul class="nav col-12 col-md-5 mb-2 justify-content-center mb-md-0">
       <li><a href="http://127.0.0.1:3000/main" class="nav-link px-2 link-light" id="help">Home</a></li>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      <li><a href="http://127.0.0.1:3000/information_vegan.html" class="nav-link px-2 link-light" id="help2">About</a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      <li><a href="http://127.0.0.1:3000/information_news.html" class="nav-link px-2 link-light" id="help3">Contents</a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <li><a href="http://127.0.0.1:3000/information_vegan.html" class="nav-link px-2 link-light" id="help2">About</a>
+      </li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <li><a href="http://127.0.0.1:3000/information_news.html" class="nav-link px-2 link-light" id="help3">Contents</a>
+      </li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       <li><a href="http://127.0.0.1:3000/show_item" class="nav-link px-2 link-light" id="help4">Shop</a></li>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       <li><a href="http://127.0.0.1:3000/recommend_start.html" class="nav-link px-2 link-light" id="help5">Recommend</a>
@@ -79,29 +90,32 @@
 
     <div class="col-md-3 col-sm-2 text-end">
       <div class="dropdown">
-        <button class="btn btn-outline-light dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
-                <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
-                <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
-            </svg>
+        <button class="btn btn-outline-light dropdown-toggle" type="button" id="dropdownMenuButton1"
+          data-bs-toggle="dropdown" aria-expanded="false">
+          <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-person-circle"
+            viewBox="0 0 16 16">
+            <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
+            <path fill-rule="evenodd"
+              d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z" />
+          </svg>
         </button>
         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
           <%if(user==null){%>
             <li><a class="dropdown-item" href="./login.html">로그인</a></li>
             <li><a class="dropdown-item" href="./Join.html"> 회원가입</a></li>
-          
-          <%}else{%>
-            <li><a class="dropdown-item" href="http://127.0.0.1:3000/mypage_main">마이페이지</a></li>
-            <li><a class="dropdown-item" href="http://127.0.0.1:3000/logout">로그아웃</a></li>
-          <%}%>
+
+            <%}else{%>
+              <li><a class="dropdown-item" href="http://127.0.0.1:3000/mypage_main">마이페이지</a></li>
+              <li><a class="dropdown-item" href="http://127.0.0.1:3000/logout">로그아웃</a></li>
+              <%}%>
         </ul>
         &nbsp;&nbsp;&nbsp;&nbsp;
       </div>
     </div>
   </header>
   <img src="../img/위시리스트배경.jpg" alt="너굴맨" class="col-12">
-<main class="container justify-content-center">
-  <br>
+  <main class="container justify-content-center">
+    <br>
     <!-- <div class="bn-box con">
         <div class="img-box">
             <img src="./img/mp_wishList.png" alt="">
@@ -111,85 +125,131 @@
 
       <% for(let i=0 ; i<rows.length/4 ; i++){%>
         <div class="row" style="text-align: center;">
-          <% if(rows[4*i] != null) {%>
-            <div class="col-xl-3 col-lg-6 col-sm-12">
-           <a href="<%=rows[4*i].purchase_link%>"><div class="img-box"><img src="<%=rows[4*i].img_link%>" alt="" class="img-thumbnail img-fluid"></div></a> 
-           <a href="<%=rows[4*i].purchase_link%>" style="text-decoration:none; font-weight: bold;"><div class="product-name my-2"><%=rows[4*i].item_name%></div></a>
-            <div class="product-price mb-2" style="margin: 0 auto;"><%=rows[4*i].strike_price%>원</div>
-            <form action="http://127.0.0.1:3000/wish_delete" method="post">
-              <input type="hidden" name="item_name" value="<%=rows[4*i].item_name%>">
-              <input type="hidden" name="user_id" value="<%=user.id%>">
-              <input type="submit" value="❌선택취소❌" class="btn btn-outline-danger">
-            </form>
-          </div>
-          <%}%>
-
-          <% if(rows[4*i+1] != null) {%>
-            <div class="col-xl-3 col-lg-6 col-sm-12">
-            <a href="<%=rows[4*i+1].purchase_link%>"><div class="img-box"><img src="<%=rows[4*i+1].img_link%>" alt="" class="img-thumbnail img-fluid"></div></a> 
-            <a href="<%=rows[4*i+1].purchase_link%>" style="text-decoration:none; font-weight: bold;"><div class="product-name my-2"><%=rows[4*i+1].item_name%></div></a>
-             <div class="product-price mb-2"><%=rows[4*i+1].strike_price%>원</div>
-             <form action="http://127.0.0.1:3000/wish_delete" method="post">
-              <input type="hidden" name="item_name" value="<%=rows[4*i+1].item_name%>">
-              <input type="hidden" name="user_id" value="<%=user.id%>">
-              <input type="submit" value="❌선택취소❌" class="btn btn-outline-danger">
-            </form>
-          </div>
-          <%}%>
-
-          <% if(rows[4*i+2] != null) {%>
-            <div class="col-xl-3 col-lg-6 col-sm-12">
-              <a href="<%=rows[4*i+2].purchase_link%>"><div class="img-box"><img src="<%=rows[4*i+2].img_link%>" alt="" class="img-thumbnail img-fluid"></div></a> 
-              <a href="<%=rows[4*i+2].purchase_link%>" style="text-decoration:none; font-weight: bold;"><div class="product-name my-2"><%=rows[4*i+2].item_name%></div></a>
-              <div class="product-price mb-2"><%=rows[4*i+2].strike_price%>원</div>
+          <% if(rows[4*i] !=null) {%>
+            <div class="col-xl-3 col-lg-6 col-sm-6 col-xs-6">
+              <div style="height: 303px;">
+                <a href="<%=rows[4*i].purchase_link%>">
+                  <div class="img-box"><img src="<%=rows[4*i].img_link%>" alt="" class="img-thumbnail img-fluid"></div>
+                </a>
+                <a href="<%=rows[4*i].purchase_link%>" style="text-decoration:none; font-weight: bold;">
+                  <div class="product-name my-2">
+                    <%=rows[4*i].item_name%>
+                  </div>
+                </a>
+              </div>
+              <div class="product-price mb-2" style="margin: 0 auto;">
+                <%=rows[4*i].strike_price%>원
+              </div>
               <form action="http://127.0.0.1:3000/wish_delete" method="post">
-                <input type="hidden" name="item_name" value="<%=rows[4*i+2].item_name%>">
+                <input type="hidden" name="item_name" value="<%=rows[4*i].item_name%>">
                 <input type="hidden" name="user_id" value="<%=user.id%>">
                 <input type="submit" value="❌선택취소❌" class="btn btn-outline-danger">
               </form>
             </div>
-          <%}%>
+            <%}%>
 
-          <% if(rows[4*i+3] != null) {%>
-            <div class="col-xl-3 col-lg-6 col-sm-12">
-              <a href="<%=rows[4*i+3].purchase_link%>"><div class="img-box"><img src="<%=rows[4*i+3].img_link%>" alt="" class="img-thumbnail img-fluid"></div></a> 
-              <a href="<%=rows[4*i+3].purchase_link%>" style="text-decoration:none; font-weight: bold;"><div class="product-name my-2"><%=rows[4*i+3].item_name%></div></a>
-              <div class="product-price mb-2"><%=rows[4*i+3].strike_price%>원</div>
-              <form action="http://127.0.0.1:3000/wish_delete" method="post">
-                <input type="hidden" name="item_name" value="<%=rows[4*i+3].item_name%>">
-                <input type="hidden" name="user_id" value="<%=user.id%>">
-                <input type="submit" value="❌선택취소❌" class="btn btn-outline-danger">
-              </form>
-            </div>
-          <%}%>
+              <% if(rows[4*i+1] !=null) {%>
+                <div class="col-xl-3 col-lg-6 col-sm-6 col-xs-6">
+                  <div style="height: 303px;">
+                    <a href="<%=rows[4*i+1].purchase_link%>">
+                      <div class="img-box"><img src="<%=rows[4*i+1].img_link%>" alt="" class="img-thumbnail img-fluid">
+                      </div>
+                    </a>
+                    <a href="<%=rows[4*i+1].purchase_link%>" style="text-decoration:none; font-weight: bold;">
+                      <div class="product-name my-2">
+                        <%=rows[4*i+1].item_name%>
+                      </div>
+                    </a>
+                  </div>
+                  <div class="product-price mb-2">
+                    <%=rows[4*i+1].strike_price%>원
+                  </div>
+                  <form action="http://127.0.0.1:3000/wish_delete" method="post">
+                    <input type="hidden" name="item_name" value="<%=rows[4*i+1].item_name%>">
+                    <input type="hidden" name="user_id" value="<%=user.id%>">
+                    <input type="submit" value="❌선택취소❌" class="btn btn-outline-danger">
+                  </form>
+                </div>
+                <%}%>
+
+                  <% if(rows[4*i+2] !=null) {%>
+                    <div class="col-xl-3 col-lg-6 col-sm-6 col-xs-6">
+                      <div style="height: 303px;">
+                        <a href="<%=rows[4*i+2].purchase_link%>">
+                          <div class="img-box"><img src="<%=rows[4*i+2].img_link%>" alt=""
+                              class="img-thumbnail img-fluid"></div>
+                        </a>
+                        <a href="<%=rows[4*i+2].purchase_link%>" style="text-decoration:none; font-weight: bold;">
+                          <div class="product-name my-2">
+                            <%=rows[4*i+2].item_name%>
+                          </div>
+                        </a>
+                      </div>
+                      <div class="product-price mb-2">
+                        <%=rows[4*i+2].strike_price%>원
+                      </div>
+                      <form action="http://127.0.0.1:3000/wish_delete" method="post">
+                        <input type="hidden" name="item_name" value="<%=rows[4*i+2].item_name%>">
+                        <input type="hidden" name="user_id" value="<%=user.id%>">
+                        <input type="submit" value="❌선택취소❌" class="btn btn-outline-danger">
+                      </form>
+                    </div>
+                    <%}%>
+
+                      <% if(rows[4*i+3] !=null) {%>
+                        <div class="col-xl-3 col-lg-6 col-sm-6 col-xs-6">
+                          <div style="height: 303px;">
+                            <a href="<%=rows[4*i+3].purchase_link%>">
+                              <div class="img-box"><img src="<%=rows[4*i+3].img_link%>" alt=""
+                                  class="img-thumbnail img-fluid"></div>
+                            </a>
+                            <a href="<%=rows[4*i+3].purchase_link%>" style="text-decoration:none; font-weight: bold;">
+                              <div class="product-name my-2">
+                                <%=rows[4*i+3].item_name%>
+                              </div>
+                            </a>
+                          </div>
+                          <div class="product-price mb-2">
+                            <%=rows[4*i+3].strike_price%>원
+                          </div>
+                          <form action="http://127.0.0.1:3000/wish_delete" method="post">
+                            <input type="hidden" name="item_name" value="<%=rows[4*i+3].item_name%>">
+                            <input type="hidden" name="user_id" value="<%=user.id%>">
+                            <input type="submit" value="❌선택취소❌" class="btn btn-outline-danger">
+                          </form>
+                        </div>
+                        <%}%>
 
         </div>
         <br>
-      <% } %> 
+        <% } %>
 
-  </div>
+    </div>
 
     <div>
-        <img src="./img/whiteBG2.png" alt="" class="img-fluid">
+      <img src="./img/whiteBG2.png" alt="" class="img-fluid">
     </div>
-</main>
+  </main>
 
-<footer class="d-flex flex-wrap justify-content-between align-items-center py-3">
-  <p class="col-xl-6 col-lg-12 mb-0 text-muted"> <img src="./img/코딩네이터로고.PNG" alt="" height="45"
-      class="mx-3">© 2022 SmartCampus AIClass Codingnator, Inc</p>
-
-
-
-  <ul class="nav col-xl-6 col-lg-12 col-md-12 justify-content-end">
-    <li class="nav-item"><a href="#" class="nav-link px-2 text-muted" id="help10">인공_다람쥐 &nbsp; |</a></li>
-    <li class="nav-item"><a href="#" class="nav-link px-2 text-muted" id="help11">코코파더 &nbsp;|</a></li>
-    <li class="nav-item"><a href="#" class="nav-link px-2 text-muted" id="help12">샤이백엔드 &nbsp;|</a></li>
-    <li class="nav-item"><a href="#" class="nav-link px-2 text-muted" id="help13">인공_왕재수 &nbsp;|</a></li>
-    <li class="nav-item"><a href="#" class="nav-link px-2 text-muted" id="help14">인공_잘걸렸다</a></li>
-  </ul>
-</footer>
+  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3">
+    <p class="col-xl-6 col-lg-12 mb-0 text-muted"> <img src="./img/코딩네이터로고.PNG" alt="" height="45" class="mx-3">© 2022
+      SmartCampus AIClass Codingnator, Inc</p>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+    <ul class="nav col-xl-6 col-lg-12 col-md-12 justify-content-end">
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted" id="help10">인공_다람쥐 &nbsp; |</a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted" id="help11">코코파더 &nbsp;|</a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted" id="help12">샤이백엔드 &nbsp;|</a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted" id="help13">인공_왕재수 &nbsp;|</a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted" id="help14">인공_잘걸렸다</a></li>
+    </ul>
+  </footer>
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
