--- a/views/items.ejs
+++ b/views/items.ejs
@@ -390,124 +390,144 @@
 
       <% for(let i=0 ; i<rows.length/4 ; i++){%>
         <div class="row" style="text-align: center;">
-          <% if(rows[4*i] !=null) {%>
-            <div class="col-xl-3 col-lg-6 col-sm-6 col-xs-6">
-              <div style="height: 303px;">
-                <a href="<%=rows[4*i].purchase_link%>">
-                  <div class="img-box"><img src="<%=rows[4*i].img_link%>" alt="" class="img-thumbnail img-fluid"></div>
-                </a>
-                <a href="<%=rows[4*i].purchase_link%>">
-                  <div class="product-name my-2">
-                    <strong><%=rows[4*i].item_name%></strong>
-                  </div>
-                </a>
-              </div>
-              <div class="product-price mb-2" style="margin: 0 auto;">
-                <%=rows[4*i].strike_price%>원
-              </div>
-              <% if(user!=null){%>
-                <form name="testForm<%=4*i%>">
-                  <input type="hidden" name="img_link" value="<%=rows[4*i].img_link%>">
-                  <input type="hidden" name="purchase_link" value="<%=rows[4*i].purchase_link%>">
-                  <input type="hidden" name="item_name" value="<%=rows[4*i].item_name%>">
-                  <input type="hidden" name="strike_price" value="<%=rows[4*i].strike_price%>">
-                  <input type="hidden" name="user_id" value="<%=user.id%>">
-                  <input type="button" value="❤위시리스트❤" class="btn btn-danger" onclick="InsertData(<%=4*i%>)">
-                </form>
-                <% }%>
-            </div>
-            <%}%>
 
-              <% if(rows[4*i+1] !=null) {%>
-                <div class="col-xl-3 col-lg-6 col-sm-6 col-xs-6">
-                  <div style="height: 303px;">
-                    <a href="<%=rows[4*i+1].purchase_link%>">
-                      <div class="img-box"><img src="<%=rows[4*i+1].img_link%>" alt="" class="img-thumbnail img-fluid">
-                      </div>
-                    </a>
-                    <a href="<%=rows[4*i+1].purchase_link%>">
-                      <div class="product-name my-2">
-                        <strong><%=rows[4*i+1].item_name%></strong>
-                      </div>
-                    </a>
-                  </div>
-                  <div class="product-price mb-2">
-                    <%=rows[4*i+1].strike_price%>원
-                  </div>
-                  <% if(user!=null){%>
-                    <form name="testForm<%=4*i+1%>">
-                      <input type="hidden" name="img_link" value="<%=rows[4*i+1].img_link%>">
-                      <input type="hidden" name="purchase_link" value="<%=rows[4*i+1].purchase_link%>">
-                      <input type="hidden" name="item_name" value="<%=rows[4*i+1].item_name%>">
-                      <input type="hidden" name="strike_price" value="<%=rows[4*i+1].strike_price%>">
-                      <input type="hidden" name="user_id" value="<%=user.id%>">
-                      <input type="button" value="❤위시리스트❤" class="btn btn-danger" onclick="InsertData(<%=4*i+1%>)">
-                    </form>
-                    <% }%>
-                      <!-- <button class="btn btn-outline-danger">😍 위시리스트</button> -->
-                </div>
-                <%}%>
-
-                  <% if(rows[4*i+2] !=null) {%>
-                    <div class="col-xl-3 col-lg-6 col-sm-6 col-xs-6">
-                      <div style="height: 303px;">
-                        <a href="<%=rows[4*i+2].purchase_link%>">
-                          <div class="img-box"><img src="<%=rows[4*i+2].img_link%>" alt=""
-                              class="img-thumbnail img-fluid"></div>
-                        </a>
-                        <a href="<%=rows[4*i+2].purchase_link%>">
-                          <div class="product-name my-2">
-                            <strong><%=rows[4*i+2].item_name%></strong>
-                          </div>
-                        </a>
-                      </div>
-                      <div class="product-price mb-2">
-                        <%=rows[4*i+2].strike_price%>원
-                      </div>
-                      <% if(user!=null){%>
-                        <form name="testForm<%=4*i+2%>">
-                          <input type="hidden" name="img_link" value="<%=rows[4*i+2].img_link%>">
-                          <input type="hidden" name="purchase_link" value="<%=rows[4*i+2].purchase_link%>">
-                          <input type="hidden" name="item_name" value="<%=rows[4*i+2].item_name%>">
-                          <input type="hidden" name="strike_price" value="<%=rows[4*i+2].strike_price%>">
-                          <input type="hidden" name="user_id" value="<%=user.id%>">
-                          <input type="button" value="❤위시리스트❤" class="btn btn-danger" onclick="InsertData(<%=4*i+2%>)">
-                        </form>
-                        <% }%>
-                          <!-- <button class="btn btn-outline-danger">😍 위시리스트</button> -->
-                    </div>
-                    <%}%>
-
-                      <% if(rows[4*i+3] !=null) {%>
-                        <div class="col-xl-3 col-lg-6 col-sm-6 col-xs-6">
-                          <div style="height: 303px;">
-                            <a href="<%=rows[4*i+3].purchase_link%>">
-                              <div class="img-box"><img src="<%=rows[4*i+3].img_link%>" alt=""
-                                  class="img-thumbnail img-fluid"></div>
-                            </a>
-                            <a href="<%=rows[4*i+3].purchase_link%>">
-                              <div class="product-name my-2">
-                                <strong><%=rows[4*i+3].item_name%></strong>
+                            <% if(rows[4*i] !=null) {%>
+                              <div class="col-xl-3 col-lg-6 col-sm-6 col-xs-6" style="text-align: center;">
+                                <div class="row" style="display: inline-block;">
+                                  <div class="col-12" style="height: 303px; width:auto;">
+                                    <a href="<%=rows[4*i].purchase_link%>">
+                                      <div class="img-box"><img src="<%=rows[4*i].img_link%>" alt="" class="img-thumbnail img-fluid">
+                                      </div>
+                                    </a>
+                                    <a href="<%=rows[4*i].purchase_link%>">
+                                      <div class="product-name my-2">
+                                        <strong>
+                                          <%=rows[4*i].item_name%>
+                                        </strong>
+                                      </div>
+                                    </a>
+                                  </div>
+                                  <div class="product-price mb-2" style="margin: 0 auto;">
+                                    <%=rows[4*i].strike_price%>원
+                                  </div>
+                                </div>
+                                <% if(user!=null){%>
+                                  <form name="testForm<%=4*i%>">
+                                    <input type="hidden" name="img_link" value="<%=rows[4*i].img_link%>">
+                                    <input type="hidden" name="purchase_link" value="<%=rows[4*i].purchase_link%>">
+                                    <input type="hidden" name="item_name" value="<%=rows[4*i].item_name%>">
+                                    <input type="hidden" name="strike_price" value="<%=rows[4*i].strike_price%>">
+                                    <input type="hidden" name="user_id" value="<%=user.id%>">
+                                    <input type="button" value="❤위시리스트❤" class="btn btn-danger" onclick="InsertData(<%=4*i%>)">
+                                  </form>
+                                  <% }%>
                               </div>
-                            </a>
-                          </div>
-                          <div class="product-price mb-2">
-                            <%=rows[4*i+3].strike_price%>원
-                          </div>
-                          <% if(user!=null){%>
-                            <form name="testForm<%=4*i+3%>">
-                              <input type="hidden" name="img_link" value="<%=rows[4*i+3].img_link%>">
-                              <input type="hidden" name="purchase_link" value="<%=rows[4*i+3].purchase_link%>">
-                              <input type="hidden" name="item_name" value="<%=rows[4*i+3].item_name%>">
-                              <input type="hidden" name="strike_price" value="<%=rows[4*i+3].strike_price%>">
-                              <input type="hidden" name="user_id" value="<%=user.id%>">
-                              <input type="button" value="❤위시리스트❤" class="btn btn-danger"
-                                onclick="InsertData(<%=4*i+3%>)">
-                            </form>
-                            <% }%>
-                              <!-- <button class="btn btn-outline-danger">😍 위시리스트</button> -->
-                        </div>
-                        <%}%>
+                            <%}%>
+
+                            <% if(rows[4*i+1] !=null) {%>
+                              <div class="col-xl-3 col-lg-6 col-sm-6 col-xs-6" style="text-align: center;">
+                                <div class="row" style="display: inline-block;">
+                                  <div class="col-12" style="height: 303px;  width:fit-content;">
+                                    <a href="<%=rows[4*i+1].purchase_link%>">
+                                      <div class="img-box"><img src="<%=rows[4*i+1].img_link%>" alt=""
+                                          class="img-thumbnail img-fluid">
+                                      </div>
+                                    </a>
+                                    <a href="<%=rows[4*i+1].purchase_link%>">
+                                      <div class="product-name my-2">
+                                        <strong>
+                                          <%=rows[4*i+1].item_name%>
+                                        </strong>
+                                      </div>
+                                    </a>
+                                  </div>
+
+                                  <div class="product-price mb-2" style="margin: 0 auto;">
+                                    <%=rows[4*i+1].strike_price%>원
+                                  </div>
+                                </div>
+                                <% if(user!=null){%>
+                                  <form name="testForm<%=4*i+1%>">
+                                    <input type="hidden" name="img_link" value="<%=rows[4*i+1].img_link%>">
+                                    <input type="hidden" name="purchase_link" value="<%=rows[4*i+1].purchase_link%>">
+                                    <input type="hidden" name="item_name" value="<%=rows[4*i+1].item_name%>">
+                                    <input type="hidden" name="strike_price" value="<%=rows[4*i+1].strike_price%>">
+                                    <input type="hidden" name="user_id" value="<%=user.id%>">
+                                    <input type="button" value="❤위시리스트❤" class="btn btn-danger" onclick="InsertData(<%=4*i+1%>)">
+                                  </form>
+                                  <% }%>
+                                    <!-- <button class="btn btn-outline-danger">😍 위시리스트</button> -->
+                              </div>
+                              <%}%>
+
+                              <% if(rows[4*i+2] !=null) {%>
+                                <div class="col-xl-3 col-lg-6 col-sm-6 col-xs-6" style="text-align: center;">
+                                  <div class="row" style="display: inline-block;">
+                                    <div class="col-12" style="height: 303px; width:auto;">
+                                      <a href="<%=rows[4*i+2].purchase_link%>">
+                                        <div class="img-box"><img src="<%=rows[4*i+2].img_link%>" alt=""
+                                            class="img-thumbnail img-fluid">
+                                        </div>
+                                      </a>
+                                      <a href="<%=rows[4*i+2].purchase_link%>">
+                                        <div class="product-name my-2">
+                                          <strong>
+                                            <%=rows[4*i+2].item_name%>
+                                          </strong>
+                                        </div>
+                                      </a>
+                                    </div>
+                                    <div class="product-price mb-2" style="margin: 0 auto;">
+                                      <%=rows[4*i+2].strike_price%>원
+                                    </div>
+                                  </div>
+                                  <% if(user!=null){%>
+                                    <form name="testForm<%=4*i+2%>">
+                                      <input type="hidden" name="img_link" value="<%=rows[4*i+2].img_link%>">
+                                      <input type="hidden" name="purchase_link" value="<%=rows[4*i+2].purchase_link%>">
+                                      <input type="hidden" name="item_name" value="<%=rows[4*i+2].item_name%>">
+                                      <input type="hidden" name="strike_price" value="<%=rows[4*i+2].strike_price%>">
+                                      <input type="hidden" name="user_id" value="<%=user.id%>">
+                                      <input type="button" value="❤위시리스트❤" class="btn btn-danger" onclick="InsertData(<%=4*i+2%>)">
+                                    </form>
+                                    <% }%>
+                                </div>
+                                <%}%>
+
+                                <% if(rows[4*i+3] !=null) {%>
+                                  <div class="col-xl-3 col-lg-6 col-sm-6 col-xs-6" style="text-align: center;">
+                                    <div class="row" style="display: inline-block;">
+                                      <div class="col-12" style="height: 303px; width:auto;">
+                                        <a href="<%=rows[4*i+3].purchase_link%>">
+                                          <div class="img-box"><img src="<%=rows[4*i+3].img_link%>" alt=""
+                                              class="img-thumbnail img-fluid" style="display: inline-block;">
+                                          </div>
+                                        </a>
+                                        <a href="<%=rows[4*i+3].purchase_link%>">
+                                          <div class="product-name my-2">
+                                            <strong>
+                                              <%=rows[4*i+3].item_name%>
+                                            </strong>
+                                          </div>
+                                        </a>
+                                      </div>
+                                      <div class="product-price mb-2" style="margin: 0 auto;">
+                                        <%=rows[4*i+3].strike_price%>원
+                                      </div>
+                                    </div>
+                                    <% if(user!=null){%>
+                                      <form name="testForm<%=4*i+3%>">
+                                        <input type="hidden" name="img_link" value="<%=rows[4*i+3].img_link%>">
+                                        <input type="hidden" name="purchase_link" value="<%=rows[4*i+3].purchase_link%>">
+                                        <input type="hidden" name="item_name" value="<%=rows[4*i+3].item_name%>">
+                                        <input type="hidden" name="strike_price" value="<%=rows[4*i+3].strike_price%>">
+                                        <input type="hidden" name="user_id" value="<%=user.id%>">
+                                        <input type="button" value="❤위시리스트❤" class="btn btn-danger"
+                                          onclick="InsertData(<%=4*i+3%>)">
+                                      </form>
+                                      <% }%>
+                                  </div>
+                                  <%}%>
 
         </div>
         <br>
