제품 이름 오류 수정

--- a/views/mypage_wishList.ejs
+++ b/views/mypage_wishList.ejs
@@ -159,7 +159,7 @@
                   </a>
                   <a href="<%=rows[4*i+1].purchase_link%>" style="text-decoration:none; font-weight: bold;">
                     <div class="product-name my-2">
-                      <%=rows[4*i].item_name%>
+                      <%=rows[4*i+1].item_name%>
                     </div>
                   </a>
                 </div>
@@ -184,7 +184,7 @@
                     </a>
                     <a href="<%=rows[4*i+2].purchase_link%>" style="text-decoration:none; font-weight: bold;">
                       <div class="product-name my-2">
-                        <%=rows[4*i].item_name%>
+                        <%=rows[4*i+2].item_name%>
                       </div>
                     </a>
                   </div>
