--- a/views/mypage_wishList.ejs
+++ b/views/mypage_wishList.ejs
@@ -75,7 +75,7 @@
       <img src="./img/logo02.PNG" alt="" id="logo">
     </a>
     <!-- nbsp텍스트 영역으로 들여옴, col-md 바꿈 -->
-    <ul class="nav col-12 col-md-5 mb-2 justify-content-center mb-md-0">
+    <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
       <li><a href="http://127.0.0.1:3000/main" class="nav-link px-2 link-light" id="help">Home</a></li>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       <li><a href="http://127.0.0.1:3000/information_vegan.html" class="nav-link px-2 link-light" id="help2">About</a>
