--- a/views/index.ejs
+++ b/views/index.ejs
@@ -122,6 +122,11 @@
       display: flex;
     }
 
+  
+
+    
+
+    
 
     
 
@@ -281,7 +286,7 @@ body{background-color:#f1f1f2}
           <div class="col-lg-6 align-self-center"><br>
             <div class="text-center">
               <div class="row row-cols-2 justify-content-start">
-                <a href="https://www.lush.co.kr/goods/goods_view.php?goodsNo=1000001178" class="col mx-auto mdP"><img src="https://www.lush.co.kr/data/goods/20/02/06/1000001178/1000001178_detail_04.jpg" class="img-thumbnail mx-auto" alt="" onmouseenter="zoomIn(event)" onmouseleave="zoomOut(event)"></a>
+                <a href="https://www.lush.co.kr/goods/goods_view.php?goodsNo=1000001178" class="col mx-auto mdP"><img src="https://www.lush.co.kr/data/goods/20/02/06/1000001178/1000001178_detail_04.jpg" class="img-thumbnail mx-auto mdI" alt="" onmouseenter="zoomIn(event)" onmouseleave="zoomOut(event)"></a>
                 <a href="https://www.lush.co.kr/goods/goods_view.php?goodsNo=1000000894" class="col mx-auto mdP"><img src="https://lush.co.kr/data/goods/19/12/49/1000000894/1000000894_detail_052.jpg" class="img-thumbnail mx-auto" alt="" onmouseenter="zoomIn(event)" onmouseleave="zoomOut(event)"></a>
               </div>
               <div class="row row-cols-2 justify-content-start">
@@ -408,6 +413,7 @@ body{background-color:#f1f1f2}
   </script>
   <script src="./js/jquery-3.6.0.js"></script>
   <script>
+    
     function zoomIn(event) {
       event.target.style.transform = "scale(1.1)"; //1.2배 확대
       event.target.style.zIndex = 1;
