햄버거 진짜 최종

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -87,7 +87,7 @@
       div.col-md-3.text-end {
         flex-grow: 1;
       }
-      button#dropdownMenuButton1.dropdown-toggle::after{
+      button#dropdownMenuButton1_l.dropdown-toggle::after{
         display: none;
       }
       button#dropdownMenuButton1_h.dropdown-toggle::after {
