--- a/views/items.ejs
+++ b/views/items.ejs
@@ -95,7 +95,9 @@
       button#dropdownMenuButton1.dropdown-toggle::after {
         display: none;
       }
-
+      button#dropdownMenuButton1_h.dropdown-toggle::after {
+        display: none;
+      }
       #dropdownMenuButton1_h {
         display: inline-block !important;
       }
