--- a/views/random_result.ejs
+++ b/views/random_result.ejs
@@ -120,9 +120,13 @@
       button#dropdownMenuButton1.dropdown-toggle::after{
         display: none;
       }
+      
       #dropdownMenuButton1_h{
       display: inline-block !important;
     }
+    button#dropdownMenuButton1_h.dropdown-toggle::after {
+        display: none;
+      }
       
     }
     #dropdownMenuButton1_h:hover path{
