--- a/views/random_result.ejs
+++ b/views/random_result.ejs
@@ -197,7 +197,7 @@
     </header>
 
     <main class="container my-5 justify-content-center">
-
+      <img src="./img/white3.JPG" alt="" class="mx-2 my-5">
     <br><br>
     
     <p class = "Que" align = "center">회원님에게 추천 드릴 제품입니다</p>
@@ -235,6 +235,7 @@
           </div>
         </div>
     </div>
+    <img src="./img/white3.JPG" alt="" class="mx-2 my-5">
 </main>
 
 
