--- a/views/mypage_modify.ejs
+++ b/views/mypage_modify.ejs
@@ -161,23 +161,23 @@
                                 </tr>
                                 <tr>
                                     <td><label for="exampleFormControlInput1" class="form-label" id="idR">이름</label></td>
-                                    <td><input type="text" class="form-control" name="name"></td>
+                                    <td><input type="text" class="form-control" name="name" value="<%=user.name%>"></td>
                                 </tr>
                                 <tr>
                                     <td><label for="exampleFormControlInput1" class="form-label" id="idR">닉네임</label></td>
-                                    <td><input type="text" class="form-control" name="nick"></td>
+                                    <td><input type="text" class="form-control" name="nick" value="<%=user.nick%>"></td>
                                 </tr>
                                 <tr>
                                     <td>
                                         <label for="exampleFormControlInput1" class="form-label" id="idR">E-mail</label>
                                     </td>
                                     <td>
-                                        <input type="text" class="form-control" name="email"></td>
+                                        <input type="text" class="form-control" name="email" value="<%=user.email%>"></td>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td><label for="exampleFormControlInput1" class="form-label" id="idR">휴대전화</label></td>
-                                    <td><input type="text" class="form-control" name="tel"></td>
+                                    <td><input type="text" class="form-control" name="tel" value="<%=user.tel%>"></td>
                                 </tr>
                                 <tr>
                                     <td><label for="exampleFormControlInput1" class="form-label">성별</label></td>
