--- a/views/index.ejs
+++ b/views/index.ejs
@@ -161,8 +161,11 @@ body{background-color:#f1f1f2}
 }
 /* (포스트,뉴스,설명)호버 끝 */
 
-
-
+#help{
+      color: white;
+      font-family: Helvetica Nene;
+      font-size: 16px;
+    }
 
 
 
@@ -181,13 +184,13 @@ body{background-color:#f1f1f2}
     </a>
 
     <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-      <li><a href="http://127.0.0.1:3000/main" class="nav-link px-2 link-light">Home</a></li>
+      <li><a href="http://127.0.0.1:3000/main" class="nav-link px-2 link-light" id="help">Home</a></li>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      <li><a href="http://127.0.0.1:3000/information_vegan.html" class="nav-link px-2 link-light">About</a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      <li><a href="http://127.0.0.1:3000/information_news.html" class="nav-link px-2 link-light">Contents</a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      <li><a href="http://127.0.0.1:3000/show_item" class="nav-link px-2 link-light">Shop</a></li>
+      <li><a href="http://127.0.0.1:3000/information_vegan.html" class="nav-link px-2 link-light" id="help">About</a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <li><a href="http://127.0.0.1:3000/information_news.html" class="nav-link px-2 link-light" id="help">Contents</a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <li><a href="http://127.0.0.1:3000/show_item" class="nav-link px-2 link-light" id="help">Shop</a></li>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      <li><a href="http://127.0.0.1:3000/recommend_start.html" class="nav-link px-2 link-light">Recommend</a></li>
+      <li><a href="http://127.0.0.1:3000/recommend_start.html" class="nav-link px-2 link-light" id="help">Recommend</a></li>
     </ul>
     
      
