--- a/views/mypage_modify.ejs
+++ b/views/mypage_modify.ejs
@@ -143,7 +143,7 @@
 
         <div class="container col-lg-6 col-md-10">
             <div class="">
-                <form class="needs-validation justify-content-center" novalidate="" action="http://127.0.0.1:3000/update" method="post">
+                <form class="needs-validation justify-content-center" novalidate="" action="http://127.0.0.1:3000/update" method="post" name="join_form">
                 <div class="row g-3 justify-content-center">
                     <div class="mb-3">
                             <table class="">
@@ -179,19 +179,6 @@
                                     <td><label for="exampleFormControlInput1" class="form-label" id="idR">휴대전화</label></td>
                                     <td><input type="text" class="form-control" name="tel" value="<%=user.tel%>"></td>
                                 </tr>
-                                <tr>
-                                    <td><label for="exampleFormControlInput1" class="form-label">성별</label></td>
-                                    <td>
-                                        <input class="form-check-input" type="radio" name="gender" value="male">
-                                        <label class="form-check-label" for="flexRadioDefault1">
-                                          남
-                                        </label>
-                                        <input class="form-check-input" type="radio" name="gender" value="female">
-                                        <label class="form-check-label" for="flexRadioDefault1">
-                                          여
-                                        </label>
-                                    </td>
-                                </tr>
                                 
                             </table>
                     </div>
@@ -199,7 +186,7 @@
         
                   <hr>
                 <div class="text-center">
-                    <button class="btn btn-success btn-lg col-8 align-items-center" style="background-color: #005b3a;"  type="submit">정보 수정하기</button>
+                    <button class="btn btn-success btn-lg col-8 align-items-center" style="background-color: #005b3a;"  type="button" onclick="checkAll()">정보 수정하기</button>
                 </div>
                   
                 </form>
@@ -229,11 +216,27 @@
     </footer>
 
 
-
-
-
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script>
+      function checkAll(){
+       let now_pw = join_form.now_pw;
+       let new_pw = join_form.new_pw;
 
+       if (now_pw.value ==""){
+         alert("현재 비밀번호 입력하세요")
+         now_pw.focus();
+         return false;
+       }
+
+       if(new_pw.value ==""){
+        alert("새로운 비밀번호를 입력하세요")
+        new_pw.focus();
+        return false;
+       }
+
+       document.join_form.submit();
+
+      }
+    </script>
 </body>
 </html>
