알림창 수정

--- a/views/items.ejs
+++ b/views/items.ejs
@@ -124,10 +124,14 @@
       padding-left: 1px;
       padding-right: 1px;
     }
+    .sweetalert-lg{
+    margin: auto;
+    }
   </style>
   <!-- <script src="../public/"></script> -->
 </head>
-
+<script  src="//cdn.jsdelivr.net/npm/sweetalert2@10">></script>
+<link rel="stylesheet" href="sweetalert2.min.css">
 <body>
   <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3">
 
@@ -580,9 +584,23 @@
         },
         success: function (data) {
           if (data.result == "ok") {
-            alert('위시리스트 담기 완료!');
+            Swal.fire({
+              position: 'top-end',
+              icon: 'success',
+              title: '위시리스트 추가 완료',
+              showConfirmButton: false,
+              timer: 1000,
+              customClass:'sweetalert-lg'
+            });
           } else {
-            alert('위시리스트 담기 실패..');
+            Swal.fire({
+              position: 'top-end',
+              icon: 'success',
+              title: '위시리스트 추가 실패',
+              showConfirmButton: false,
+              timer: 1000,
+              customClass:'sweetalert-lg'
+            });
           }
         }
       });
