--- a/views/mypage_wishList.ejs
+++ b/views/mypage_wishList.ejs
@@ -62,10 +62,14 @@
 
 
     }
+  .sweetalert-lg{
+    margin: auto;
+    }
   </style>
 
 </head>
-
+<script  src="//cdn.jsdelivr.net/npm/sweetalert2@10">></script>
+<link rel="stylesheet" href="sweetalert2.min.css">
 <body>
 
   <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3">
@@ -270,8 +274,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"></script>
-    <script>
 
+
+   
+<script>
       function InsertData(num) {
         var queryString = $("form[name=testForm" + num + "]").serialize();
         console.log(queryString)
@@ -285,14 +291,25 @@
           },
           success: function (data) {
             if (data.result == "ok") {
-              alert('위시리스트 삭제 완료!');
-              location.reload();
+              // alert('위시리스트 삭제 완료!');
+              Swal.fire({
+              position: 'top-end',
+              icon: 'success',
+              title: '위시리스트 삭제 완료',
+              showConfirmButton: false,
+              timer: 1000,
+              customClass:'sweetalert-lg'
+            });
+              setTimeout("location.reload()",1200);
             } else {
               alert('위시리스트 삭제 실패..');
             }
           }
         });
       }
+      
+
+     
     </script>
 </body>
 
